# fiori-server

./: .env  .env.example  Cargo.toml  docker-compose.yml  log  manifest.json  meta.xml  tests.http
.github/: copilot-instructions.md
config/entities/: Contacts.json  Customers.json
data/: Addresses.json  ChangeRequests.json  Contacts.json  Customers.json  Defects.json  EntityConfigs.json  EntityFacets.json  EntityFields.json  EntityNavigations.json  EntityRelationships.json  EntityTableFacets.json  FieldValueListItems.json  FieldValueLists.json  Incidents.json  OrderItems.json  Orders.json  Partners.json  Products.json  ServiceRequests.json  Tests.json
docs/: flp-ushell-architecture.md  flpd-cdm-platform.md  metadata-tables.md  postgres-setup.md  request-flow.md
migrations/: 001_create_entity_records.sql
src/: annotations.rs  app_state.rs  builders.rs  data_store.rs  draft.rs  entity.rs  handlers.rs  main.rs  pg_store.rs  query.rs  routing.rs  settings.rs
src/entities/: Fake-Fiori.code-workspace  entity_config.rs  entity_facet.rs  entity_field.rs  entity_navigation.rs  entity_relationship.rs  entity_table_facet.rs  field_value_list.rs  field_value_list_item.rs  generic.rs  meta.rs  mod.rs  order.rs  order_item.rs  product.rs
src/model/: defaults.rs  mod.rs  resolved.rs  resolver.rs
src/odata/: annotations_gen.rs  builders.rs  entity_type.rs  mod.rs  xml_types.rs
src/runtime/: data_store.rs  handlers.rs  mod.rs  pg_store.rs  routing.rs
src/spec/: entity_spec.rs  meta_package.rs  mod.rs  (+2 more)
webapp/: Component.js  flp-init.js  index.html  manifest.json
(+5 files in other folders)
