[package]
name = "fake-fiori-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
postgres = ["sqlx", "dotenvy"]

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
urlencoding = "2"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "v5"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json"], optional = true }
dotenvy = { version = "0.15", optional = true }